--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,45 @@ html{
     scroll-behavior: smooth;
 }
 
+section{
+    padding: 2rem 9%;
+}
+
+section:nth-child(even){
+    background: #eee;
+}
+
+.sub-heading{
+    text-align: center;
+    color:var(--green);
+    font-size: 2rem;
+    padding-top: 1rem;
+}
+
+.heading{
+    text-align: center;
+    color:var(--black);
+    font-size: 3rem;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+.btn{
+    margin-top: 1rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--black);
+    border-radius: .5rem;
+    cursor: pointer;
+    padding: .8rem 3rem;
+}
+
+.btn:hover{
+    background: var(--green);
+    letter-spacing: .1rem;
+} 
+
 header{
     position: fixed;
     top: 0; left: 0; right: 0;
@@ -81,6 +120,109 @@ header .icons #menu-bars{
     display: none;
 }
 
+#search-form{
+    position: fixed;
+    top:-110%; left:0;
+    height: 100%; width: 100%;
+    z-index: 1004;
+    background: rgba(0,0,0,.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding:0 1rem;
+}
+
+#search-form.active{
+    top: 0;
+
+}
+
+#search-form #search-box{
+    width:50rem;
+    border-bottom: .1rem solid #fff;
+    padding: 1rem 0;
+    color: #fff;
+    font-size: 3rem;
+    text-transform: none;
+    background:none ;
+
+}
+
+#search-form #search-box::placeholder{
+    color:#eee;
+}
+
+#search-form #search-box::-webkit-search-cancel-button{
+    -webkit-appearance: none;
+}
+
+#search-form label{
+    color: #fff;
+    cursor:pointer;
+    font-size: 3rem;   
+}
+
+#search-form label:hover{
+    color:var(--green)
+}
+
+#search-form #close{
+    position: absolute;
+    color:#fff;
+    cursor: pointer;
+    top:2rem; right: 3rem;
+    font-size:5rem
+}
+
+
+.home .home-slider .slide{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+    padding-top: 9rem;
+}
+
+ .home .home-slider .slide .content{
+    flex:1 1 45rem;
+ }
+ 
+ .home .home-slider .slide .image{
+    flex:1 1 45rem;
+ }
+ 
+ .home .home-slider .slide .image img{
+    width: 100%;
+ }
+
+ .home .home-slider .slide .content span{
+    color:var(--green);
+    font-size: 2.5rem;
+}
+
+.home .home-slider .slide .content h3{
+    color:var(--black);
+    font-size: 7rem;
+}
+
+.home .home-slider .slide .content p{
+    color:var(--light-color);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+    line-height: 1.5;
+
+}
+
+.swiper-pagination-bullet-active{
+    background: var(--green);
+}
+
+.dishes .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+    gap:1.5rem;
+}
+
 /*media queries*/
 @media (max-width:991px){
    
@@ -90,6 +232,10 @@ header .icons #menu-bars{
 
     header{
         padding: 1rem 2rem;
+    }
+
+    section{
+        padding:2rem;
     }
 }
 @media (max-width:768px){
@@ -107,6 +253,10 @@ header .icons #menu-bars{
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     }
 
+    header .navbar.active{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    }
+
     header .navbar a{
         display: block;
         padding: 1.5rem;
@@ -115,6 +265,15 @@ header .icons #menu-bars{
         background: #eee;
     }
 }
+
+    #search-form #search-box{
+        width:90%;
+        padding:0 1rem;
+    } 
+     
+    .home .home-slider .slide .content h3{
+        font-size: 5rem;
+    }
 
 @media (max-width:991px){
    
